--- a/templates/partials/header.html
+++ b/templates/partials/header.html
@@ -324,8 +324,8 @@
 					</div> -->
         <div class="dropdown d-inline-block user-dropdown">
             <button type="button" class="btn header-item waves-effect" id="page-header-user-dropdown" data-bs-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
-				<img class="rounded-circle header-profile-user" src="{% static 'images/users/avatar-2.jpg' %}"
-					alt="Header Avatar"> <span class="d-none d-xl-inline-block ms-1">{{user.username}}</span>
+				<img class="rounded-circle header-profile-user" {% if datas.profile_img %}  src="../uploads/profile_upload/{{datas.profile_img}}" {% else %} src="../uploads/profile_upload/download.png" {% endif %}
+					alt="Header Avatar"> <span class="d-none d-xl-inline-block ms-1">{{user.email}}</span>
 				<i class="mdi mdi-chevron-down d-none d-xl-inline-block"></i>
 			</button>
             <div class="dropdown-menu dropdown-menu-end">
