--- a/templates/partials/sidebar.html
+++ b/templates/partials/sidebar.html
@@ -74,7 +74,7 @@
                         </li>
                         <li><a href="{% url 'user_management' %}" key="t-coming-soon">User Management</a>
                         </li>
-                        <li><a href="#" key="t-timeline">Scan QR Code</a>
+                        <li><a href="{% url 'qr_search' %}" key="t-timeline">Scan QR Code</a>
                         </li>
                         <li><a href="{% url 'message_center' %}" key="t-faqs">Message Center</a>
                         </li>
