--- a/templates/pages/authentication/auth-resetpassword.html
+++ b/templates/pages/authentication/auth-resetpassword.html
@@ -45,35 +45,35 @@
                                             </div>
 
                                             <div class="p-2 mt-5">
-                                                <div class="alert alert-success mb-4" role="alert">
-                                                    Enter your Email and instructions will be sent to you!
-                                                </div>
-                                                <div class="alert alert-success mb-4" role="alert" id="succ_msg" style="display: none;">
-                                                    Message has been sent successfully!
-                                                </div>
-                                                {% if messages %}
-                                                {% for message in messages %}
-                                                    <div class="alert {{ message.tags }} mb-4" id="link_exp" role="alert">
-                                                        <strong>{{ message }}</strong>
-                                                    </div>
-                                                {% endfor %}
-                                                {% endif %}
-                                                <form action="" id="reset_pass" method="POST" enctype="multipart/form-data">
+                                                <form action="{% url 'reset_pass' %}" id="reset_pass" method="POST" enctype="multipart/form-data" class='needs-validation' onsubmit="return check_pass();" novalidate>
                                                     {% csrf_token %}
-                                                    <div class="auth-form-group-custom mb-4">
-                                                        <i class="ri-mail-line auti-custom-input-icon"></i>
-                                                        <div id="div_id_email" class="form-group">
-                                                            <label for="user_email" class=" requiredField">
-                                                                Email<span class="asteriskField">*</span>
+                                                    <div class="mb-3 auth-form-group-custom mb-4 form-group">
+                                                        <i class="ri-lock-2-line auti-custom-input-icon"></i>
+                                                        <div id="div_id_password" class="form-group">
+                                                            <label for="user_password" class=" requiredField">
+                                                                New Password<span class="asteriskField">*</span>
                                                             </label>
                                                             <div class="">
-                                                                <input type="text" name="email" placeholder="Enter your email" id="user_email" class="form-control emailinput form-control" maxlength="50">
-                                                                <span id="hint_id_email" class="form-text" style="color: #ff3d60;""></span>
-                                                                <input type="hidden" name="module" value="send_mail">
+                                                                    <input type="password" name="new_password" placeholder="Enter your new password" id="new_password" class="form-control textinput textInput" maxlength="50" minlength="5" required="">
+                                                                    <div class="invalid-feedback">New Password is Required && Minimum 5 characters required</div>
                                                             </div>
                                                         </div>
                                                     </div>
-
+                                                    <div class="mb-3 auth-form-group-custom mb-4 form-group">
+                                                        <i class="ri-lock-2-line auti-custom-input-icon"></i>
+                                                        <div id="div_id_password" class="form-group">
+                                                            <label for="user_password" class=" requiredField">
+                                                                Confirm Password<span class="asteriskField">*</span>
+                                                            </label>
+                                                            <div class="">
+                                                                    <input type="password" name="con_password" placeholder="Confirm your password" id="con_password" class="form-control textinput textInput" maxlength="50" minlength="5" required="">
+                                                                    <div class="invalid-feedback">Confirm Password is Required && Minimum 5 characters required</div>
+                                                                    <span id="err_msg" class="form-text" style="color: #ff3d60;""></span>
+                                                            </div>
+                                                        </div>
+                                                    </div>
+                                                    <input type="hidden" name="module" value="reset_password">
+                                                    <input type="hidden" name="hidden_id" value="{{hid_id}}">
                                                     <div class="mt-4 text-center">
                                                         <button class="btn btn-primary w-md waves-effect waves-light" type="submit" id="reset_send">Reset</button>
                                                     </div>
@@ -109,59 +109,25 @@
         <script src="{% static 'libs/node-waves/waves.min.js' %}"></script>
 
         <script src="{% static 'js/app.js' %}"></script>
+        <script src="{% static 'js/pages/form-validation.init.js' %}"></script>
 
     </body>
 </html>
 <script>
-    $("#user_email").change(function(){
-        if($(this).val()==''){
-            $("#hint_id_email").prop("display","block");
-            $("#hint_id_email").html("Email is Required");
-        }
-        else{
-            $("#hint_id_email").prop("display","none");
-            $("#hint_id_email").html("");
-        }
+    $(document).on("keyup","#new_password,#con_password",function(){
+        $("#err_msg").html("")
     });
-    $(document).ready(function() {
-        setTimeout(function() {
-            $("#link_exp").css("display", 'none');
-        }, 2000);
-    });
-    $("#reset_pass").submit(function(e){
-        e.preventDefault();
-        e.stopPropagation();
-        var email=$("#user_email").val()
-        var datas = new FormData(this);
-        if(email!=''){
-            $("#reset_send").prop("disabled",true)
-            $.ajax({
-                url: "{% url 'reset_pass' %}",
-                type: "POST",
-                data: datas,
-                dataType: 'json',
-                contentType: false,
-                cache: false,
-                processData: false,
-                success: function(data) {
-                    $("#reset_send").prop("disabled",false)
-                    if(data['err']==''){
-                        $("#succ_msg").css("display","block");
-                        setTimeout(function() {
-                            $("#succ_msg").css("display", 'none');
-                        }, 2000);
-                    }
-                    else{
-                        $("#hint_id_email").prop("display","block");
-                        $("#hint_id_email").html(data['err']);
-                    }
-                },
-                error: function() {}
-            }); 
+    function check_pass(){
+        var new_password=$("#new_password").val()
+        var con_password=$("#con_password").val()
+        if(new_password!='' && con_password!=''){
+            if(new_password!=con_password){
+                $("#err_msg").html("New password and confirm password mismatch")
+                return false;
+            }
+            else{
+                return true;
+            }
         }
-        else{
-            $("#hint_id_email").prop("display","block");
-            $("#hint_id_email").html("Email is Required");
-        }
-    });
+    }
 </script>
